# rust-rpm

./: Cargo.toml  README.md
librpm/: Cargo.toml
librpm-sys/: Cargo.toml  build.rs
librpm-sys/src/: lib.rs
librpm/include/: librpm.hpp
src/: config.rs  db.rs  error.rs  lib.rs  macro_context.rs  main.rs  package.rs
src/cli/: args.rs  mod.rs
src/internal/: global_state.rs  header.rs  iterator.rs  mod.rs  tag.rs  td.rs  ts.rs
src/query/: mod.rs  mode.rs
src/query/internal/: header.rs  mod.rs
src/rpm/: config.rs  db.rs  error.rs  flie.rs  macro_context.rs  mod.rs  package.rs
src/rpm/internal/: global_state.rs  header.rs  mod.rs  tag.rs  td.rs  ts.rs
tests/: bench-i.txt  bench-r.txt  bench-rpm.py  bench-rpm.txt  bench.py  bench.txt  rust-rpm  rust-rpm-c.txt  rust-rpm-r.txt  rust-rpm.txt  test.py
tests/performance/: bench-v-c.txt  bench-v-i.txt  bench-v-p.txt  bench-v-r.txt  bench-v.txt  rust-rpm-v-c.txt  rust-rpm-v-i.txt  rust-rpm-v-p.txt  rust-rpm-v-r.txt  rust-rpm-v.txt  test.py
tests/running_time/: bench-c.txt  bench-p.txt  rust-rpm-i.txt  rust-rpm-p.txt
