[package]
name = "rust-rpm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.19.0"
streaming-iterator = "0.1.9"
librpm-sys = { path = "librpm-sys" }
clap = { version = "4.5.4", features = ["derive"] }
bitflags = "2.5.0"

[features]
librpm-4-14 = []
default = ["librpm-4-14"]

[workspace]
members =["librpm-sys"]
